--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde_derive = "1.0.119"
 tokio = { version = "1.0.2", features = ["full"] }
 futures = "0.3"
 async-std = { version = "1", features = ["attributes", "tokio1"] }
+actix-web = { version = "4.0.0-beta.10" }
